--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jwt": "^1.1.4",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "reactjs-popup": "^2.0.5",
     "stream": "0.0.2",
     "util": "^0.12.4",
