--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-jwt": "^1.1.4",
     "react-moment": "^1.1.2",
     "react-router-dom": "^5.2.0",
